--- a/exercises/helm/helm-chart/values-staging.yaml
+++ b/exercises/helm/helm-chart/values-staging.yaml
@@ -5,8 +5,8 @@ image:
   name: nginx
   tag: 1.18.0
 resources:
-  cpu: "50m"
-  memory: "128Mi"
+  cpu: 50m
+  memory: 128Mi
 configmap:
   data: "version: 1.18.0"
 
