--- a/project/kubernetes/deploy.yaml
+++ b/project/kubernetes/deploy.yaml
@@ -6,9 +6,12 @@ metadata:
 spec:
   selector:
     matchLabels:
-      name: techtrends
+      app: techtrends
   replicas: 1
   template:
+    metadata:
+      labels:
+        app: techtrends
     spec:
       containers:
       - image: starsoi/techtrends:latest
