--- a/project/argocd/helm-techtrends-prod.yaml
+++ b/project/argocd/helm-techtrends-prod.yaml
@@ -9,6 +9,7 @@ spec:
   destination:
     namespace: prod
     server: https://kubernetes.default.svc
+  project: default
   source:
     helm:
       valueFiles: [values-prod.yaml]
