--- a/project/argocd/helm-techtrends-staging.yaml
+++ b/project/argocd/helm-techtrends-staging.yaml
@@ -9,6 +9,7 @@ spec:
   destination:
     namespace: staging
     server: https://kubernetes.default.svc
+  project: default
   source:
     helm:
       valueFiles: [values-staging.yaml]
