--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -12,6 +12,14 @@ jobs:
       - 
         name: Checkout
         uses: actions/checkout@v3
+      - 
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: starsoi/techtrends
+          tags: |
+            type=semver,pattern={{version}}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -27,4 +35,4 @@ jobs:
         with:
           context: ./project
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/techtrends:latest
+          tags: ${{ steps.meta.outputs.tags }}
